# back-tester-2026

./: CMakeLists.txt  README.md  conanfile.py  pyproject.toml
cmake/: ArrowFeather.cmake  GenerateVersionFile.cmake  PyArrowFeather.cmake  ThirdPartyLibs.cmake
scripts/: bench_folder_ingest.py  bench_zip_ingest.py  convert_to_feather.py  smoke_ingest.py
src/common/: MarketDataEvent.hpp
src/ingest/: CMakeLists.txt  FeatherReader.cpp  FeatherReader.hpp  FolderIngest.cpp  FolderIngest.hpp  MarketDataFile.cpp  MarketDataFile.hpp
src/lob/: BookDispatcher.cpp  BookDispatcher.hpp  LimitOrderBook.cpp  LimitOrderBook.hpp  ShardedBookDispatcher.cpp  ShardedBookDispatcher.hpp
src/main/: main.cpp
test/: BookDispatcherTest.cpp  CMakeLists.txt  FeatherReaderTest.cpp  FolderIngestTest.cpp  MarketDataEventTest.cpp  ShardedBookDispatcherTest.cpp
